--- a/lib/life_complex_web/components/layouts/root.html.heex
+++ b/lib/life_complex_web/components/layouts/root.html.heex
@@ -18,10 +18,7 @@
           {@current_user.email}
         </li>
         <li>
-          <.link
-            href={~p"/users/settings"}
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
-          >
+          <.link href={~p"/users/settings"} class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700">
             Settings
           </.link>
         </li>
@@ -36,18 +33,12 @@
         </li>
       <% else %>
         <li>
-          <.link
-            href={~p"/users/register"}
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
-          >
+          <.link href={~p"/users/register"} class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700">
             Register
           </.link>
         </li>
         <li>
-          <.link
-            href={~p"/users/log_in"}
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
-          >
+          <.link href={~p"/users/log_in"} class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700">
             Log in
           </.link>
         </li>
