--- a/lib/life_complex_web/live/life_complexity_live/index.html.heex
+++ b/lib/life_complex_web/live/life_complexity_live/index.html.heex
@@ -14,6 +14,9 @@
   </:actions>
 </.header>
 
+<div>
+ LLM Result: {@llm_result["content"] || ""}
+</div>
 <.table
   id="life_complexities"
   rows={@streams.life_complexities}
